# qianshou-node-client

./: .gitignore  .npmrc  CI_BUILD_GUIDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  客户端代码审查报告.md
.github/workflows/: build-tauri.yml  build-windows.yml
.tauri-keys-2026/: qianshou-2026.key.pub
scripts/: README-publish.md  prebake-runtime.sh  publish-from-release.sh
shared/: index.ts
shared/utils/: domains.ts
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/runtime/: README.md  manifest.json
src-tauri/resources/runtime/cpython/cpython-3.11.15-macos-aarch64-none/lib/: libtcl9.0.dylib  libtcl9tk9.0.dylib
src-tauri/resources/runtime/cpython/cpython-3.11.15-macos-aarch64-none/lib/python3.11/: _sysconfigdata__darwin_darwin.py
src-tauri/resources/runtime/envs/image/: bundled.json
src-tauri/src/: api_error.rs  auto_updater.rs  benchmark.rs  commands.rs  crash_reporter.rs  hardware_capabilities.rs  lib.rs  main.rs  proc_util.rs  runtime_monitor.rs  state.rs  system_info.rs  toolbox.rs
src-tauri/src/auth/: consent_store.rs  device_store.rs  magic_link.rs  mod.rs  node_store.rs  password_auth.rs  token_store.rs
src-tauri/src/comm/: mod.rs  oss_upload.rs  result_queue.rs  v8_proto.rs  v8_ws.rs
src-tauri/src/proxy/: handler.rs  mod.rs  session.rs
src-tauri/src/runtime/: auto_install_tiers.rs  bootstrap_bundled.rs  commands.rs  detector.rs  garbage_collect.rs  installer.rs  manifest.rs  mod.rs  paths.rs  skills_fetcher.rs  uv.rs
src-tauri/src/task/: executor.rs  llm_ollama.rs  llm_runtime.rs  mod.rs  pull_worker.rs  resource_limit.rs  skill_pack.rs  skill_registry.rs  tool_caller.rs
src/components/: AIModelCard.vue  BundleStatusBar.vue  ConsentMatrixModal.vue  DeviceCard.vue  EarningsChart.vue  EarningsSparkline.vue  Icon.vue  InstallHelpModal.vue  RuntimePanel.vue  SettingsPanel.vue  Sidebar.vue  TaskKanban.vue  TaskRunFeed.vue  TopBar.vue
src/components/ads/: AdActionModal.vue  AdSlot.vue  SplashAdModal.vue
src/components/dashboard/: CapabilityGrid.vue  MiniSpark.vue  StatCard.vue
src/components/shell/: NavRail.vue  NoticeMarquee.vue  StatusRail.vue
src/components/ui/: Panel.vue
src/composables/: useAccount.ts  useAdAction.ts  useBundles.ts  useCapabilities.ts  useConnection.ts  useDevice.ts  useEarnings.ts  useEventStream.ts  useHistory.ts  useNav.ts  useNceProfile.ts  useOpSlots.ts  useRuntime.ts  useTasks.ts  useTheme.ts  useUpdater.ts
src/icons/: paths.ts
src/lib/: domains.ts
src/pages/: AICapabilityPage.vue  AgentCockpit.vue  CapabilitiesPage.vue  DashboardHome.vue  DevicePage.v1bak.vue  DevicePage.vue  EarningsPage.vue  HelpPage.vue  HistoryPage.vue  MarketPage.vue  MyNCEPage.vue  SettingsPage.vue  ThrottlePage.vue  ToolboxPage.vue
src/styles/: global.css  global.v1bak.css
src/views/: Dashboard.vue  Welcome.vue
